Moving more of the list item processing from csv2pine to preprocess; now csv2pine is only concerned with changes needed for the pine format, while preprocess produces fully cleaned csv data

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
+# Unfinished/alpha ideas
+/alpha
+
 # Python
-#   Byte-compiled / optimized / DLL files
+##   Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
